# debugging-benchmark

./: .gitignore  MANIFEST.in  README.md  docker-test.py  evogfuzz_middle  evogfuzzbasedfuzzer_npr  inputs.db  inputsfromhellfuzzer_middle  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: coverage.yml  publish.yml  pypi_publish.yml  testpypi_publish.yml  tests.yml
notebooks/: demo.ipynb  docker.ipynb  readme.ipynb  sap.ipynb  tests4py.ipynb  toy_subjects.ipynb
playground/: evaluation_latex_export.py  evogfuzz_evaluation.py  fuzz_calculator.py  fuzz_refactory.py  fuzz_tests4py.py  play_eval.py
src/cli/: evaluation.py  subject.py  subjects.py  tool.py  tools.py
src/debugging_benchmark/: benchmark.py  database.py  refactory.py  report.py  student_assignments.py  tests4py_benchmark.py  tools.py
src/debugging_benchmark/calculator/: calculator.py
src/debugging_benchmark/evaluation/: evaluation.py
src/debugging_benchmark/evaluation/evoggen/: evoggenbasedfuzzer_middle.pkl  evoggenbasedfuzzer_npr.pkl
src/debugging_benchmark/evaluation/finding_errors/: evogfuzz_evaluation.py
src/debugging_benchmark/evaluation/not failing/: evogfuzz_evaluation.py
src/debugging_benchmark/expression/: expression.py
src/debugging_benchmark/markup/: markup.py
src/debugging_benchmark/middle/: middle.py
src/debugging_benchmark/refactory/question_1/: refactory_online.csv
src/debugging_benchmark/refactory/question_2/: refactory_online.csv
src/debugging_benchmark/refactory/question_3/: refactory_online.csv
src/debugging_benchmark/refactory/question_4/: description.txt  refactory_online.csv
src/debugging_benchmark/refactory/question_5/: description.txt  refactory_online.csv
src/debugging_benchmark/student_assignments/: grammars.py  program.py  projects.py  repository.py
src/debugging_benchmark/tests4py/: api.py  grammars.py  project.py  repository.py  tests4py_benchmark.py  tests4py_projects.py
src/debugging_benchmark/tests4py_benchmark/: api.py  grammars.py  program.py  project.py  repository.py  tests4py_api.py  tests4py_projects.py
src/debugging_benchmark/tests4py_benchmark/resources/: Dockerfile
src/debugging_benchmark/tests4py_helper/: tests4py_api.py  tests4py_grammars.py  tests4py_projects.py
src/debugging_benchmark_resources/calculator/: calculator.py
src/debugging_framework/: benchmark.py  coverage.py  evaluator.py  execution_handler.py  expceptions.py  feature_collector.py  feature_extractor.py  features.py  fuzzer.py  grammar.py  grammar_fuzzer.py  helper.py  input.py  memory_manager.py  oracle.py  oracle_construction.py  probalistic_grammar_fuzzer.py  probalistic_grammar_miner.py  report.py  results.py  student_assignments.py  subjects.py  tools.py  types.py
src/debugging_framework/benchmark/: loader.py  program.py  repository.py
src/debugging_framework/docker/: Dockerfile.base  __init__.py  container.py  docker_setup.py  manager.py  requirements_docker.txt  runner.py
src/debugging_framework/evaluation/: evaluator.py  results.py  tools.py
src/debugging_framework/execution/: execution_handler.py  report.py
src/debugging_framework/fuzzingbook/: coverage.py  fuzzer.py  grammar.py  helper.py  probalistic_fuzzer.py  probalistic_grammar_miner.py
src/debugging_framework/input/: __init__.py  input.py  oracle.py  oracle_construction.py
src/debugging_framework/learning/: feature_collector.py  feature_extractor.py  features.py
src/debugging_framework/resources/: Dockerfile.base  docker_runner.py  docker_runner_inputs.py  docker_setup.py  requirements_docker.txt
test/: test_coverage.py  test_database.py  test_execution_handler.py  test_oracle_construction.py  test_playground.py  test_refactory.py  test_test_inputs.py  test_tests4py.py  test_tools.py
test/resources/: program_simple_coverage.py
tests/: test_calculator.py  test_coverage.py  test_database.py  test_evaluator.py  test_execution_handler.py  test_failure_report.py  test_features.py  test_generic_oracle.py  test_grammar.py  test_oracle_construction.py  test_refactory.py  test_student_assignments.py  test_test_inputs.py  test_tests4py.py  test_tools.py  test_toy_subjects.py
(+1533 files in other folders)
