# setuptools > 64.0.0 for local editable installs
# wheel for pypi
[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debugging-benchmark"
version = "0.0.1"
authors = [
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
    { name = "Kai Werk", email = "werkkai@hu-berlin.de" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
keywords = [ "debugging", "benchmark" ]
requires-python = ">=3.10"
dependencies = [
    "fuzzingbook==1.1",
    "jupyter",
    "isla-solver",
    # Funktioniert das so?
    "tests4py @ git+https://github.com/smythi93/Tests4Py@de4c1798b65fb52bfd506e03d596ee75fdd5a9ee"
]


# für cli
# [project.scripts]


[project.urls]
"Homepage" = "https://github.com/martineberlein/debugging-benchmark"
"Bug Tracker" = "https://github.com/martineberlein/debugging-benchmark/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "twine",
    "black"
]