# https://stackoverflow.com/questions/74508024/is-requirements-txt-still-needed-when-using-pyproject-toml
# muss doch nochmal überarbeitet werden
# und eine requirements.txt wird doch noch benötigt

# setuptools > 64.0.0 for local editable installations
# wheel for pypi
[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debugging-benchmark"
version = "0.2.0"
authors = [
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
    { name = "Kai Werk", email = "werkkai@hu-berlin.de" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
keywords = [ "debugging", "benchmark" ]
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "isla-solver",
    "numpy~=1.26.1",
    "pandas~=2.1.2",
    "psutil~=5.9.6",
    "shap>=0.41",
    "lightgbm>=3.3.2",
]

# für coverage 
[tool.coverage.run]
omit = [
    "src/debugging_benchmark/refactory/*",
    "src/debugging_benchmark/student_assignments/*",
    "/usr/lib/*"
]

# für cli
[project.scripts]
evaluation = "cli.evaluation:main"
tool = "cli.tools:main"
subject = "cli.subjects:main"

[project.urls]
"Homepage" = "https://github.com/martineberlein/debugging-benchmark"
"Bug Tracker" = "https://github.com/martineberlein/debugging-benchmark/issues"

[project.optional-dependencies]
dev = [
    "twine",
    "black",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1"
]