[metadata]
name = debugging-benchmark
version = attr: debugging_framework.__version__
description = Debugging Benchmark
author = Martin Eberlein
author_email = martin.eberlein@informatik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martineberlein/debugging-benchmark
project_urls =
    Bug Tracker = https://github.com/martineberlein/debugging-benchmark/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
install_requires =
    fuzzingbook==1.1
    jupyter
    isla-solver
packages = find:
package_dir = =src
include_package_data = True

[options.package_data]
* = *.py


[options.extras_require]
dev =
    pytest>=7.2.0
    twine
    black

[options.packages.find]
where = ./src
